Disabled Marquee Hover (mobile). Fixed spacing issues.

--- a/css/style.scss
+++ b/css/style.scss
@@ -95,6 +95,7 @@ body{
   display:none;
   height: 100%;
   align-items: center;
+  cursor:pointer;
 
   &__image{
     vertical-align: middle;
@@ -106,7 +107,7 @@ body{
   &__head{
     height: auto;
     width: auto;
-    opacity: 1;
+    opacity: 0.4;
     transition: opacity 0.6s;
   }
 
@@ -117,7 +118,7 @@ body{
     font-size:1.8em;
     color: color_scheme('black');
     text-shadow: 1.5px 1.5px 0px rgba(255, 168, 0, 0.3);
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.6s ease;
   }
 
@@ -126,7 +127,7 @@ body{
     top: 35% ;
     width: 70%;
     overflow:hidden;
-    opacity: 0;
+    opacity: 1;
     transition: opacity 0.6s;
   }
 
@@ -136,13 +137,13 @@ body{
     text-align: center;
   }
 
-  &:hover > &__title, &:hover > &__body{
-    opacity: 1;
-  }
-
-  &:hover > &__head{
-    opacity: 0.4;
-  }
+  // &:hover > &__title, &:hover > &__body{
+  //   opacity: 1;
+  // }
+  //
+  // &:hover > &__head{
+  //   opacity: 0.4;
+  // }
 }
 
 
@@ -156,12 +157,15 @@ body{
 .article-card{
   height: 18em;
   width: 98%;
-  padding: 0.5em;
+  padding: 0.2em 0.5em;
   overflow-x: hidden;
   align-items: center;
+  cursor:pointer;
+  margin: 1.25em 0;
 
   &__title{
     position: relative;
+    margin: 0 0 0.25em 0;
     height: 10%;
     text-align: center;
     color: color_scheme('black');
@@ -193,7 +197,7 @@ body{
     overflow: hidden;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
-    box-shadow: 4px 0px 3px rgba(255, 168, 0, 0.25);
+    box-shadow: 4px 5px 3px rgba(255, 168, 0, 0.25);
   }
 
   &__image{
@@ -205,7 +209,7 @@ body{
   &__body{
     height: 25%;
     width: 100%;
-    border-top: 0.1em solid color_scheme('light blue');
+    border-top: 0.2em solid color_scheme('light blue');
     background-image: linear-gradient(to bottom right,lighten(color_scheme('yellow'),20),color_scheme('yellow'));
     border-bottom-left-radius: 1em;
     border-bottom-right-radius: 1em;
@@ -227,7 +231,7 @@ body{
   }
 
   &:nth-of-type(2n) > &__head{
-    box-shadow: 4px 0px 3px rgba(0, 85, 176, 0.25);
+    box-shadow: 4px 5px 3px rgba(0, 85, 176, 0.25);
   }
 
   &:nth-of-type(2n) > &__body{
